# Particles

./: .gitignore  AppConfig.h  Attractor.h  CMakeLists.txt  OscHandler.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  Scene.cpp  Scene.h  SceneCamera.h  main.cpp
resources/shaders/: lighting.vs
